2015-07-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed a crashing bug with Nepomuk and certain file types (Bug 345458).

2015-06-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with HTML exporting titles with single-quotes (Bug 348381).

2015-05-27  Robby Stephenson  <robby@homebase.mars>

	* Removed the Citebase fetcher.

2015-05-24  Robby Stephenson  <robby@homebase.mars>

	* Fixed a bug showing horizontal scroll bar with many table columns (Bug 348189).

2015-03-15  Robby Stephenson  <robby@homebase.mars>

	* Removed the PilotDB exporter.

2015-02-15  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.10.

2015-02-14  Robby Stephenson  <robby@homebase.mars>

	* Updated the Moviemeter data source to use the new JSON API.
	* Removed the local KXmlRpc copy since it is no longer needed.
	* Updated cover path in DarkHorse fetcher.

2015-01-23  Robby Stephenson  <robby@homebase.mars>

	* Updated the Discogs data source to use the new JSON API.

2014-12-22  Robby Stephenson  <robby@periapsis.org>

	* Added filter rules for numbers less than and greater.

2014-12-12  Robby Stephenson  <robby@periapsis.org>

	* Converted the BoardGameGeek fetcher from a script to the XML API.

2014-12-06  Robby Stephenson  <robby@periapsis.org>

	* Added importer for BoardGameGeek collections.

2014-12-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with importing Goodreads collection.

2014-11-09  Robby Stephenson  <robby@periapsis.org>

	* Added workaround for incorrect cover thumbnail in BoardGameGeek fetcher.

2014-10-20  Robby Stephenson  <robby@periapsis.org>

	* Updated CSV importer to recognize LibraryThing files.

2014-10-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with Allocine API search using punctuation (Bug 337432).

2014-10-11  Robby Stephenson  <robby@periapsis.org>

	* Added data source for Mathematical Review.
	* Fixed crashing bug with some ISBNdb results (Bug 339063).