@@ -1,0 +1,8 @@
+Name=Cat MDS
+Type=data-source
+ArgumentKeys=1
+Arguments=%1
+CollectionType=2
+FormatType=6
+UpdateArgs=%{title}
+ExecPath=/usr/bin/cat
