@@ -1,3 +1,7 @@
+2015-08-05  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed bug with using external fetcher source with MODS output.
+
 2015-07-19  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed a crashing bug with Nepomuk and certain file types (Bug 345458).
